--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.5",
     "bootstrap": "^5.0.0-beta2",
     "jquery": "^3.6.0",
+    "material-icons": "^0.6.0",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
